torrents/torrents.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: torrents
  labels:
    app: transmission-server
spec:
  selector:
    matchLabels:
      app: transmission-server
  replicas: 1
  template:
    metadata:
      labels:
        app: transmission-server
    spec:
      dnsPolicy: Default    
      containers:
      - name: transmission-server
        image: lscr.io/linuxserver/transmission:latest
        imagePullPolicy: IfNotPresent   
        ports:
          - name: webgui
            containerPort: 9091
        volumeMounts:
          - mountPath: /downloads
            name: transmission-storage
          - mountPath: /config
            name: transmission-config
      volumes:
        - name: transmission-config
          persistentVolumeClaim:
            claimName: transmission-config
            readOnly: false
        - name: transmission-storage
          persistentVolumeClaim:
            claimName: torrents-pvc
            readOnly: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samba-server
  namespace: torrents
  labels:
    app: samba-server
spec:
  selector:
    matchLabels:
      app: samba-server
  replicas: 1
  template:
    metadata:
      labels:
        app: samba-server
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: samba-server
        image: dperson/samba:latest
        imagePullPolicy: IfNotPresent
        args:
          # disable recycle bin
          - -r
          - -s
          - "data;/data;yes;yes;no;all;none;anagno"
          - -u
          - "anagno;anagno"
        ports:
          - name: netbios
            containerPort: 139
          - name: smb
            containerPort: 445
        volumeMounts:
          - mountPath: /data
            name: samba-storage
      volumes:
        - name: samba-storage
          persistentVolumeClaim:
            claimName: torrents-pvc
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: samba-server-service
  namespace: torrents
  labels:
    app: samba-server-service
  annotations:
    metallb.io/loadBalancerIPs: "192.168.142.235, fd93:142::235"
spec:
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: RequireDualStack
  ports:
  - name: netbios
    port: 139
    protocol: TCP
    targetPort: 139
  - name: smb
    port: 445
    protocol: TCP
    targetPort: 445        
  selector:
    app: samba-server
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-server-service
  namespace: torrents
  labels:
    app: transmission-server
spec:
  ports:
  - name: dashboard
    port: 9091
    protocol: TCP
    targetPort: 9091
  selector:
    app: transmission-server
  sessionAffinity: None
